syntax = "proto3";

package kumeo.runtime;

// Servicio principal del runtime
service RuntimeService {
  // Operaciones de recursos
  rpc GetResource(ResourceRequest) returns (ResourceResponse) {}
  rpc PutResource(PutResourceRequest) returns (ResourceResponse) {}
  
  // Operaciones de mensajería
  rpc Publish(MessageRequest) returns (MessageResponse) {}
  rpc Subscribe(SubscribeRequest) returns (stream MessageResponse) {}
  
  // Health check
  rpc Health(HealthCheckRequest) returns (HealthCheckResponse) {}
}

// Mensajes para operaciones de recursos
message ResourceRequest {
  string uri = 1;
  map<string, string> options = 2;
}

message ResourceResponse {
  oneof result {
    bytes data = 1;
    string error = 2;
  }
  map<string, string> metadata = 3;
}

message PutResourceRequest {
  string uri = 1;
  bytes data = 2;
  map<string, string> options = 3;
}

// Mensajes para operaciones de mensajería
message MessageRequest {
  string subject = 1;
  bytes payload = 2;
  map<string, string> headers = 3;
}

message MessageResponse {
  bool success = 1;
  string error = 2;
  string message_id = 3;
  bytes payload = 4;
}

message SubscribeRequest {
  string subject = 1;
  string queue_group = 2;
  string id = 3;
}

// Mensajes para health check
message HealthCheckRequest {}

message HealthCheckResponse {
  enum ServingStatus {
    UNKNOWN = 0;
    SERVING = 1;
    NOT_SERVING = 2;
  }
  ServingStatus status = 1;
  string message = 2;
}
